<resources>
    <string name="app_name">parkeerautomatenv4</string>
    <string name="parkeertariefzone">parkeertariefzone:</string>
    <string name="bewonerszone">bewonerszone:</string>
    <string name="categorie">categorie:</string>
    <string name="betaalmodus">betaalmodus:</string>
    <string name="locatie">locatie:</string>
    <string name="zone">zone:</string>
    <string name="cash">cash:</string>
    <string name="loading">Loading...</string>
</resources>