<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.parkeerautomatenv4.ui.parkeerautomaat_detail.DetailViewModel" />

        <variable
            name="Parkeerautomaat"
            type="com.example.parkeerautomatenv4.data.local.ParkeerautomaatAndFields" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/text">

        <androidx.constraintlayout.widget.ConstraintLayout
            style="@style/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#0F0C24">

            <TextView
                android:id="@+id/locatieomschrijving_label"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="175dp"
                android:text="@string/locatie"
                android:textSize="18dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/locatieomschrijving"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@{Parkeerautomaat.fields.locatieomschrijving}"
                android:textSize="18dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/locatieomschrijving_label"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/betaalmodus_label"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/betaalmodus"
                android:textSize="18dp"
                app:layout_constraintEnd_toEndOf="@+id/locatieomschrijving_label"
                app:layout_constraintTop_toBottomOf="@+id/locatieomschrijving_label" />

            <TextView
                android:id="@+id/betaalmodus"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@{Parkeerautomaat.fields.betaalmodus}"
                android:textSize="18dp"
                app:layout_constraintStart_toStartOf="@+id/locatieomschrijving"
                app:layout_constraintTop_toBottomOf="@+id/locatieomschrijving" />

            <TextView
                android:id="@+id/categorie_label"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/categorie"
                android:textSize="18dp"
                app:layout_constraintEnd_toEndOf="@+id/betaalmodus_label"
                app:layout_constraintTop_toBottomOf="@+id/betaalmodus_label" />

            <TextView
                android:id="@+id/categorie"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@{Parkeerautomaat.fields.categorie}"
                android:textSize="18dp"
                app:layout_constraintStart_toStartOf="@+id/betaalmodus"
                app:layout_constraintTop_toBottomOf="@+id/betaalmodus" />

            <TextView
                android:id="@+id/bewonerszone_label"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/bewonerszone"
                android:textSize="18dp"
                app:layout_constraintEnd_toEndOf="@+id/categorie_label"
                app:layout_constraintTop_toBottomOf="@+id/categorie_label" />

            <TextView
                android:id="@+id/bewonerszone"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@{Parkeerautomaat.fields.bewonerszone}"
                android:textSize="18dp"
                app:layout_constraintStart_toStartOf="@+id/categorie"
                app:layout_constraintTop_toBottomOf="@+id/categorie" />

            <TextView
                android:id="@+id/parkeertariefzone_label"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/parkeertariefzone"
                android:textSize="18dp"
                app:layout_constraintEnd_toEndOf="@+id/bewonerszone_label"
                app:layout_constraintTop_toBottomOf="@+id/bewonerszone_label" />

            <TextView
                android:id="@+id/parkeertariefzone"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@{Parkeerautomaat.fields.parkeertariefzone}"
                android:textSize="18dp"
                app:layout_constraintStart_toStartOf="@+id/bewonerszone"
                app:layout_constraintTop_toBottomOf="@+id/bewonerszone" />

            <Button
                android:id="@+id/coppyButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Coppy addres"
                android:textColor="#ffffff"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/parkeertariefzone_label" />

            <Button
                android:id="@+id/favButton"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="favorite"
                android:textColor="#ffffff"
                app:icon="@android:drawable/btn_star"
                app:iconTint="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/coppyButton" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>